# dpdb

./: .gitignore  Cargo.toml  README.md
benches/: dpdb.rs  query.ini
lib/: Cargo.toml
lib/src/: error.rs  executor.rs  lib.rs  report.rs  response.rs  statement.rs  test.rs
lib/src/parser/: mod.rs  parser.rs
lib/src/storage/: mod.rs  storage.rs
lib/src/storage/data_format/: mod.rs
lib/src/storage/fs/: fs.rs  mod.rs  test.rs
lib/src/storage/index/: mod.rs
src/: lib.rs  main.rs
src/cli/: config.rs  dpsql.rs  mod.rs  server.rs
src/cli/tests/: mod.rs
src/db/: mod.rs
src/dpdb_core/: db.rs  dpdb.rs  error.rs  executor.rs  filesystem.rs  mod.rs  statement.rs  storage.rs  utils.rs
src/dpdb_core/parser/: parser.rs
src/dpdb_core/storage/: storage.rs
src/dpdb_repl/: dpsql.rs
src/dpdb_server/: server.rs
src/err/: mod.rs
src/net/: mod.rs  receiver.rs
