[package]
name = "dpdb"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib"]

[dependencies]
rustyline = "10.0.0"
pprof = { version = "0.10", features = ["flamegraph", "criterion"] }
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = "0.3"
bytes = "1.0.0"
once_cell = "1.13.1"
clap = { version = "3.2.17", features = ["env"] }
log = "0.4"
dpdb_core = { path = "lib" }
thiserror = "1.0"
log4rs = "1.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
criterion = "0.3"

[features]
default = []
test = []
repl = []